--- a/app/src/main/res/menu/menu_maps.xml
+++ b/app/src/main/res/menu/menu_maps.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="jpdk.geochat.MapActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/map_messages"
+        android:title="@string/menu_messages"/>
     <item android:id="@+id/map_friends"
-
         android:title="@string/menu_friends"/>
+    <item android:id="@+id/map_logoff"
+        android:title="@string/menu_logoff"/>
 </menu>
